2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* config-log.c (slave_apprise_data): Remove

	* archive.c (archive_unregister_location): 
	(archive_get_location): strdup the string to remove compiler warnings

	* location.c (location_store): Use return value
	(location_store_full_snapshot): Use return value

2001-07-12  Bradford Hovinen  <hovinen@ximian.com>

	* archive.c (archive_destroy): Clear appropriate global archive pointer
	(archive_get_current_location_id): Logic fix.

2001-07-12  Chema Celorio  <chema@celorio.com>

	* Makefile.am (INCLUDES): update to the new location for the xst backends

2001-07-12  Bradford Hovinen  <hovinen@ximian.com>

	* archive.c (archive_get_current_location_id): Only try to store a
	full snapshot if we are in a global archive

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Store
	real_name in archiver_db
	(bonobo_config_archiver_destroy): Use archiver_db->real_name with
	bonobo_url_register

2001-07-10  Bradford Hovinen  <hovinen@ximian.com>

	* default-user.xml: Add sound-properties

	* bonobo-moniker-archiver.c (archiver_resolve): Don't accept
	PropertyBag interface

2001-07-09  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Use
	bonobo_object_unref rather than gtk_object_destroy

	* bonobo-moniker-archiver.c (archiver_resolve): Allow PropertyBag
	interface as well
	(parse_name): Set *location to NULL when there is no location

	* archive.c (archive_load): Use .gnome/capplet-archive rather than
	.gnome/control-center
	(archive_set_current_location): Removed unused variables

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Try to
	load the defaults file if no rollback data can be found

2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.[ch]: Use bonobo-conf rather than
	bonobo-config for include path

	* bonobo-moniker-archiver.c (archiver_resolve): Update call to
	Bonobo_ConfigDatabase_addDatabase
