@@ -1,5 +1,8 @@
 2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
 
+	* bonobo-config-archiver.c (bonobo_config_archiver_new): Add
+	mechanism for quitting once the moniker is no longer in use
+
 	* config-log.c (slave_apprise_data): Remove
 
 	* archive.c (archive_unregister_location): 
